@@ -17,16 +17,19 @@
 package com.djrapitops.plan.storage.database.queries;
 
 import com.djrapitops.plan.delivery.domain.DateObj;
+import com.djrapitops.plan.gathering.domain.BaseUser;
 import com.djrapitops.plan.gathering.domain.GeoInfo;
 import com.djrapitops.plan.gathering.domain.Ping;
 import com.djrapitops.plan.storage.database.Database;
 import com.djrapitops.plan.storage.database.DatabaseTestPreparer;
+import com.djrapitops.plan.storage.database.queries.objects.BaseUserQueries;
 import com.djrapitops.plan.storage.database.queries.objects.GeoInfoQueries;
 import com.djrapitops.plan.storage.database.queries.objects.PingQueries;
 import com.djrapitops.plan.storage.database.transactions.commands.RemoveEverythingTransaction;
-import com.djrapitops.plan.storage.database.transactions.events.GeoInfoStoreTransaction;
 import com.djrapitops.plan.storage.database.transactions.events.PingStoreTransaction;
-import com.djrapitops.plan.storage.database.transactions.events.PlayerServerRegisterTransaction;
+import com.djrapitops.plan.storage.database.transactions.events.PlayerRegisterTransaction;
+import com.djrapitops.plan.storage.database.transactions.events.StoreGeoInfoTransaction;
+import com.djrapitops.plan.storage.database.transactions.events.StoreServerPlayerTransaction;
 import org.junit.jupiter.api.Test;
 import utilities.RandomData;
 import utilities.TestConstants;
@@ -40,8 +43,34 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public interface GeolocationQueriesTest extends DatabaseTestPreparer {
 
     @Test
+    default void geoInfoStoreTransactionOutOfOrderDoesNotFailDueToMissingUser() {
+        List<GeoInfo> expected = RandomData.randomGeoInfo();
+        for (GeoInfo geoInfo : expected) {
+            save(playerUUID, geoInfo);
+        }
+
+        List<GeoInfo> result = db().query(GeoInfoQueries.fetchAllGeoInformation()).get(playerUUID);
+        assertEquals(expected, result);
+    }
+
+    @Test
+    default void geoInfoStoreTransactionOutOfOrderUpdatesUserInformation() {
+        List<GeoInfo> geoInfos = RandomData.randomGeoInfo();
+        for (GeoInfo geoInfo : geoInfos) {
+            save(playerUUID, geoInfo);
+        }
+
+        long registerDate = RandomData.randomTime();
+        db().executeTransaction(new PlayerRegisterTransaction(playerUUID, () -> registerDate, TestConstants.PLAYER_ONE_NAME));
+
+        Optional<BaseUser> expected = Optional.of(new BaseUser(playerUUID, TestConstants.PLAYER_ONE_NAME, registerDate, 0));
+        Optional<BaseUser> result = db().query(BaseUserQueries.fetchBaseUserOfPlayer(playerUUID));
+        assertEquals(expected, result);
+    }
+
+    @Test
     default void geoInformationIsStored() {
-        db().executeTransaction(new PlayerServerRegisterTransaction(playerUUID, RandomData::randomTime,
+        db().executeTransaction(new StoreServerPlayerTransaction(playerUUID, RandomData::randomTime,
                 TestConstants.PLAYER_ONE_NAME, serverUUID(), TestConstants.GET_PLAYER_HOSTNAME));
 
         List<GeoInfo> expected = RandomData.randomGeoInfo();
@@ -56,7 +85,7 @@ public interface GeolocationQueriesTest extends DatabaseTestPreparer {
     }
 
     default void save(UUID uuid, GeoInfo info) {
-        db().executeTransaction(new GeoInfoStoreTransaction(uuid, info));
+        db().executeTransaction(new StoreGeoInfoTransaction(uuid, info));
     }
 
     @Test
@@ -104,7 +133,7 @@ public interface GeolocationQueriesTest extends DatabaseTestPreparer {
 
         Database db = db();
         for (UUID uuid : uuids) {
-            db.executeTransaction(new PlayerServerRegisterTransaction(uuid, () -> 0L, "", serverUUID(),
+            db.executeTransaction(new StoreServerPlayerTransaction(uuid, () -> 0L, "", serverUUID(),
                     TestConstants.GET_PLAYER_HOSTNAME));
         }
 
@@ -153,7 +182,7 @@ public interface GeolocationQueriesTest extends DatabaseTestPreparer {
 
     @Test
     default void filterOptionGeolocationsAreUnique() {
-        db().executeTransaction(new PlayerServerRegisterTransaction(playerUUID, RandomData::randomTime,
+        db().executeTransaction(new StoreServerPlayerTransaction(playerUUID, RandomData::randomTime,
                 TestConstants.PLAYER_ONE_NAME, serverUUID(), TestConstants.GET_PLAYER_HOSTNAME));
 
         List<GeoInfo> savedData = RandomData.randomGeoInfo();
@@ -169,7 +198,7 @@ public interface GeolocationQueriesTest extends DatabaseTestPreparer {
 
     @Test
     default void geolocationFilterResultsGetThePlayer() {
-        db().executeTransaction(new PlayerServerRegisterTransaction(playerUUID, RandomData::randomTime,
+        db().executeTransaction(new StoreServerPlayerTransaction(playerUUID, RandomData::randomTime,
                 TestConstants.PLAYER_ONE_NAME, serverUUID(), TestConstants.GET_PLAYER_HOSTNAME));
 
         List<GeoInfo> savedData = RandomData.randomGeoInfo();
@@ -177,8 +206,8 @@ public interface GeolocationQueriesTest extends DatabaseTestPreparer {
             save(playerUUID, geoInfo);
         }
 
-        Set<UUID> expected = Collections.singleton(playerUUID);
-        Set<UUID> result = db().query(GeoInfoQueries.uuidsOfPlayersWithGeolocations(
+        Set<Integer> expected = Set.of(db().query(BaseUserQueries.fetchUserId(playerUUID)).orElseThrow(AssertionError::new));
+        Set<Integer> result = db().query(GeoInfoQueries.userIdsOfPlayersWithGeolocations(
                 Collections.singletonList(savedData.get(0).getGeolocation()))
         );
         assertEquals(expected, result);
